[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleep-tracker-ai-mcp"
version = "0.1.0"
description = "Log sleep duration, quality, and calculate sleep debt and consistency scores."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
sleep_tracker_ai_mcp = "sleep_tracker_ai_mcp.server:main"
